Fix overflowing text on Media Card see #73

--- a/src/blocks/media/scss/_content.scss
+++ b/src/blocks/media/scss/_content.scss
@@ -46,4 +46,10 @@
 		opacity: var(--novablocks-media-content-background-opacity);
 		pointer-events: none;
 	}
+
+	> * {
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+		word-break: break-word;
+	}
 }
